refactor: configurar volumen dinámico y actualizar estilos del formulario
- Reemplazado path hardcodeado por variable de entorno `FLASK_PATH_OUTPUT` en compose.yml para mayor flexibilidad
- Actualizado el diseño visual del formulario de adición de cónyuge con nueva paleta de colores verde corporativa
- Agregada fuente personalizada Lato y mejorado el espaciado y bordes para mejor legibilidad

--- a/compose.yml
+++ b/compose.yml
@@ -35,7 +35,7 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: /home/elegro/proyectos/php/php8/www/comfaca-enlinea/laravel/storage/temp
+      device: ${FLASK_PATH_OUTPUT:-./output}
       o: bind,uid=1000,gid=1000,rw
 
 networks:
